--- a/themes/default/student/index.html
+++ b/themes/default/student/index.html
@@ -90,14 +90,21 @@
                     </section>
                     <!-- END : ATTENDANCE SUMMARY  -->
 
-                    <!-- START : CLASS STUDENT TOTAL BAR GRAPH -->
-                    <section class="class-bar-chart mt-5">
-                        <h4 class="page-title">Students in Classes</h4>
-                        <img src="https://lh4.googleusercontent.com/G7c_EDDarlte5Op54JJkxMKV4DkvKaM-ds6mqGeYvuyrZh0lSqmWopJ6myaCSYHr2avEVrFiyI8Vj0sC94izVP1YMlcm0d2TFVMFNcRmlqcsOvGV-SIdI_CmiilsAMPmLmXAdvtp" alt="">
-                        <img src="https://landing.moqups.com/img/content/charts-graphs/pie-donut-charts/simple-pie-chart/simple-pie-chart-1600.png" alt="" height="600" width="600">
-                    </section>
-                    <!-- END : CLASS STUDENT TOTAL BAR GRAPH -->
+                    <!-- START : CLASS VIEW ATTENDANCE -->
+                    <section class="class-attendance-chart mt-5">
 
+                        <!-- TITLE -->
+                        <h4 class="page-title mb-4">Students in Classes</h4>
+
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col bg-white pt-3" id="chart-1"></div>
+                                <div class="col bg-white pt-3" id="chart-2"></div>
+                            </div>
+                        </div>
+
+                    </section>
+                    <!-- END : CLASS VIEW ATTENDANCE -->
 
                 </div>
 
@@ -108,3 +115,66 @@
 
 {{ template.footer|raw }}
 </body>
+
+<script>
+
+    // APEXCHARTS
+    let options = {
+        chart: {
+            height: 500,
+            type: 'bar',
+        },
+        plotOptions: {
+            bar: {
+                horizontal: false,
+            }
+        },
+        dataLabels: {
+            enabled: true
+        },
+        title: {
+            text: 'No of Students in a class'
+        },
+        series: [{
+            data: [{% for class in classes %} {{ class.total }},{% endfor %}]
+        }],
+        xaxis: {
+            categories: [ {% for class in classes %} '{{ class.name }}',{% endfor %} ],
+        }
+    }
+
+    let options2 = {
+        chart: {
+            width: 600,
+            type: 'pie',
+        },
+        title: {
+            text: 'Overall Percentage'
+        },
+        labels: [{% for class in classes %} '{{ class.name }}',{% endfor %}],
+        series: [{% for class in classes %} {{ class.total }},{% endfor %}],
+        responsive: [{
+            breakpoint: 480,
+            options: {
+                chart: {
+                    width: 200
+                },
+                legend: {
+                    position: 'bottom'
+                }
+            }
+        }]
+    }
+
+    let chart1 = new ApexCharts(
+        document.querySelector("#chart-1"),
+        options
+    )
+    let chart2 = new ApexCharts(
+        document.querySelector("#chart-2"),
+        options2
+    )
+    chart1.render()
+    chart2.render()
+
+</script>
