--- a/themes/default/attendance/index.html
+++ b/themes/default/attendance/index.html
@@ -97,7 +97,7 @@
 
                         <div class="col-12">
                             <div class="row">
-                                <div class="col bg-white pt-3" id="chart-1"></div>
+                                <div class="col chart-bg pt-3" id="chart-1"></div>
                             </div>
                         </div>
 
