--- a/themes/default/health/index.html
+++ b/themes/default/health/index.html
@@ -100,8 +100,8 @@
 
                         <div class="col-12">
                             <div class="row">
-                                <div class="col bg-white pt-3" id="chart-1"></div>
-                                <div class="col bg-white pt-3" id="chart-2"></div>
+                                <div class="col chart-bg pt-3" id="chart-1"></div>
+                                <div class="col chart-bg pt-3" id="chart-2"></div>
                             </div>
                         </div>
 
