controller/student index issue fixed

--- a/themes/default/attendance/index.html
+++ b/themes/default/attendance/index.html
@@ -60,7 +60,7 @@
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ staff.total.all }}</h5>
-                                        <p class="card-text">l
+                                        <p class="card-text">
                                             Male -  <i class="la la-male"></i> {{ staff.total.male }}<br/>
                                             Female -  <i class="la la-female"></i> {{ staff.total.female }}
                                         </p>
