staff report modification

--- a/themes/default/report/health.html
+++ b/themes/default/report/health.html
@@ -12,7 +12,7 @@
 
                 <section class="report-health">
 
-                    <h4 class="page-title"> Helath Reports </h4>
+                    <h4 class="page-title"> Health Reports </h4>
 
                     <div class="col-12 mt-5">
                         <div class="row">
